@@ -4,6 +4,10 @@ CHANGE LOG
 
 2007-05-30  Warren L. DeLano <warren@delsci.com>
 
+	* align command now has default max_gap of 50 (for performance)
+	
+	* various updates to the sequence viewer to improve behavior
+	
 	* added "super" command to enable more robust alignments
 	
 2007-05-29  Warren L. DeLano <warren@delsci.com>
